# any2md

./: .gitignore  .vercelignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  QUICKSTART.md  QUICK_START.md  README.md  START_HERE.md  VERCEL_DEPLOYMENT.md  VERCEL_QUICK_SETUP.md  WEB_UI_GUIDE.md  WEB_UI_IMPLEMENTATION.md  any2md.spec  build_exe.bat  build_executable.py  check_installation.py  pyproject.toml  requirements.txt  run_server.py  start_web_ui.bat  start_web_ui.py  vercel.json
.github/: REPOSITORY_STRUCTURE.md
.github/workflows/: build-exe.yml  ci.yml
api/: index.py
docs-example/: mkdocs.yml  web-ui-demo.md
public/: index.html
src/any2md/: cli.py  gui.py
src/any2md/converters/: docx_converter.py  pdf_converter.py  xlsx_converter.py
src/any2md/core/: __init__.py  base_converter.py  config.py
src/any2md/normalizer/: __init__.py  link_rewriter.py
src/any2md/web/: __init__.py
src/any2md/web/static/: style.css
src/doc2mkdocs/: __init__.py  __main__.py
src/doc2mkdocs/converters/: __init__.py
src/doc2mkdocs/core/: report.py
src/doc2mkdocs/normalizer/: image_handler.py  markdown_normalizer.py
src/doc2mkdocs/utils/: __init__.py  filename_sanitizer.py  logger.py
src/doc2mkdocs/web/: app.py
src/doc2mkdocs/web/static/: app.js  index.html
tests/: __init__.py  conftest.py  test_cli.py  test_converters.py  test_normalizer.py  test_web.py
